[package]
name = "triangles"
version = "0.1.0"
authors = ["cicinuna <cicinuna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "=0.17.2"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

[dependencies.gfx-backend-dx12]
git = "https://github.com/gfx-rs/gfx"
rev = "7b7a6353"

[build-dependencies]
glsl-to-spirv = "=0.1.6"